[tool.poetry]
name = "psykoda"
version = "0.1.0"
description = "Anomaly detection for IDS logs"
authors = [
    "Koda, Satoru <koda.satoru@fujitsu.com>",
    "Kokubo, Hirotaka <kokubo.hirotaka@fujitsu.com>",
    "Ohori, Ryuichi <ohori.ryuichi@fujitsu.com>",
]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
matplotlib = "~3.2"
numpy = "*"
pandas = "^1.2"
scikit-learn = "^0.23"
scipy = "*"
numba = "^0.53"
shap = "^0.37"
tensorflow = "^2.3.4"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.812"
tox = "^3.23.0"
pylint = "^2.10.0"
coverage = "^5.5"
Sphinx = "^4.0.2"
isort = "^5.9.1"
recommonmark = "^0.7.1"
sphinx-markdown-tables = "^0.0.15"

[tool.poetry.scripts]
psykoda = "psykoda.cli:main"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
extend_skip = ["docs", "examples"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
